--- a/CarsMaintenance/app.config
+++ b/CarsMaintenance/app.config
@@ -6,11 +6,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="TMSEntities" connectionString="metadata=res://*/TMS.Entity.csdl|res://*/TMS.Entity.ssdl|res://*/TMS.Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True&quot;"
-			providerName="System.Data.EntityClient" />
-    <add name="QueryConnectionString"
-			connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False"
-			providerName="System.Data.SqlClient" />
+    <add name="TMSEntities" connectionString="metadata=res://*/TMS.Entity.csdl|res://*/TMS.Entity.ssdl|res://*/TMS.Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient"/>
+    <add name="QueryConnectionString" connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
