add log4net support

--- a/CarsMaintenance/CarsMaintenance.csproj
+++ b/CarsMaintenance/CarsMaintenance.csproj
@@ -54,6 +54,15 @@
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Common.Logging">
+      <HintPath>..\lib\Common.Logging.dll</HintPath>
+    </Reference>
+    <Reference Include="Common.Logging.Log4Net">
+      <HintPath>..\lib\Common.Logging.Log4Net.dll</HintPath>
+    </Reference>
+    <Reference Include="log4net">
+      <HintPath>..\lib\log4net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ReportViewer.Common, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="Microsoft.ReportViewer.WinForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
@@ -499,6 +508,9 @@
       <DependentUpon>ViewSystemUserForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="log4net.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Properties\DataSources\CarsMaintenance.Reports.AbnormityScrapDataSet.datasource" />
     <None Include="Properties\DataSources\CarsMaintenance.Reports.ColligateDataSet+ColligateByJobPositionDataTable.datasource" />
     <None Include="Properties\DataSources\CarsMaintenance.Reports.ColligateDataSet+ColligateByJobPositionRow.datasource" />
