--- a/CarsMaintenance/app.config
+++ b/CarsMaintenance/app.config
@@ -4,6 +4,9 @@
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="CarsMaintenance.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
     </sectionGroup>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging"/>
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="TMSEntities" connectionString="metadata=res://*/TMS.Entity.csdl|res://*/TMS.Entity.ssdl|res://*/TMS.Entity.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False;MultipleActiveResultSets=True&quot;"
@@ -27,6 +30,14 @@
       </setting>
     </CarsMaintenance.Properties.Settings>
   </applicationSettings>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Log4Net.Log4NetLoggerFactoryAdapter, Common.Logging.Log4net">
+        <arg key="configType" value="FILE-WATCH"/>
+        <arg key="configFile" value="~/log4net.config"/>
+      </factoryAdapter>
+    </logging>
+  </common>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
