set code delete flag false

--- a/CarsMaintenance/app.config
+++ b/CarsMaintenance/app.config
@@ -23,7 +23,7 @@
   <applicationSettings>
     <CarsMaintenance.Properties.Settings>
       <setting name="DeleteFlag" serializeAs="String">
-        <value>True</value>
+        <value>False</value>
       </setting>
       <setting name="ToolGroupCode" serializeAs="String">
         <value>G9</value>
