--- a/CarsMaintenance/CarsMaintenance.csproj
+++ b/CarsMaintenance/CarsMaintenance.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Common\Validation\DecimalValidator.cs" />
     <Compile Include="Common\Validation\GridEmptyVaildator.cs" />
     <Compile Include="Common\Validation\IntValidator.cs" />
+    <Compile Include="Common\Validation\ParentCodeValidator.cs" />
     <Compile Include="Common\Validation\ValidationManager.cs" />
     <Compile Include="Common\Validation\RequiredValidator.cs" />
     <Compile Include="Common\Validation\IValidator.cs" />
