1.《借用单管理》作业位置选船舶时、内（外）贸项不填不可保存 2.登陆界面以大气为主 3.《借用单》查看应显示需归还数

--- a/CarsMaintenance/CarsMaintenance.csproj
+++ b/CarsMaintenance/CarsMaintenance.csproj
@@ -688,6 +688,7 @@
   <ItemGroup>
     <Content Include="app.ico" />
     <Content Include="Reports\tip.jpg" />
+    <None Include="Resources\Login.tif" />
     <None Include="Images\Logo.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -712,9 +713,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
