--- a/CarsMaintenance/app.config
+++ b/CarsMaintenance/app.config
@@ -26,7 +26,7 @@
         <value>False</value>
       </setting>
       <setting name="ToolGroupCode" serializeAs="String">
-        <value>G9</value>
+        <value>99</value>
       </setting>
     </CarsMaintenance.Properties.Settings>
   </applicationSettings>
