--- a/CarsMaintenance/app.config
+++ b/CarsMaintenance/app.config
@@ -15,9 +15,14 @@
       providerName="System.Data.SqlClient" />
     <add name="CarsMaintenance.Properties.Settings.QueryConnectionString"
       connectionString="Data Source=.\SQLExpress;Initial Catalog=TMS;Integrated Security=True;Pooling=False"
-      providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient" />   
   </connectionStrings>
-  <startup>
+
+  <appSettings>
+    <add key="TechnicsPath" value="\\192.168.1.156\工艺标准"/>
+  </appSettings>
+  
+  <startup>   
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
   </startup>
   <applicationSettings>
